# lib/db/src/schema/index.ts
@@ -5,3 +5,4 @@ export * from "./maintenance";
 export * from "./documents";
 export * from "./conversations";
 export * from "./messages";
+export * from "./mechanics";
